--- a/package.json
+++ b/package.json
@@ -97,6 +97,10 @@
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
-        "ilib-locale": "^1.2.2"
+        "ilib-common": "^1.1.1",
+        "ilib-ctype": "^1.0.0",
+        "ilib-locale": "^1.2.1",
+        "ilib-localedata": "^1.3.2",
+        "ilib-localematcher": "^1.2.1"
     }
 }
