--- a/package.json
+++ b/package.json
@@ -58,26 +58,33 @@
         "build": "npm run build:prod",
         "build:prod": "grunt babel --mode=prod",
         "build:dev": "grunt babel --mode=dev",
-        "build:test": "webpack-cli --config webpack-test.config.js",
+        "build:webtest": "webpack-cli --config webpack-test.config.js",
         "build:pkg": "echo '{\"type\": \"commonjs\"}' > lib/package.json",
+        "build:locales": "echo '{\"locales\":[' $(cat locales.txt) ']}' > locales.json ; echo 'export const localeList = ' > test/locales.js ; cat locales.json >> test/locales.js",
+        "build:assemble": "npm-run-all build:locales ; ilib-assemble -m .  --localefile ./locales.json assembled src",
+        "build:test": "npm-run-all build:locales build:dev build:assemble build:webtest",
         "dist": "npm-run-all doc build:prod build:pkg; npm pack",
-        "test": "npm run test:cli",
-        "test:cli": "LANG=en_US.UTF8 npm run build:dev ; node test/testSuite.js",
-        "test:all": "npm-run-all test:cli test:web",
+        "test": "npm-run-all build:dev test:cli",
+        "test:cli": "LANG=en_US.UTF8 npm run build:dev ; bash test/testSuite.sh",
         "test:web": "LANG=en_US.UTF8 npm run build:test ; open-cli ./test/testSuite.html ; open-cli ./test/testSuite.html -- firefox",
+        "test:all": "npm-run-all test:cli test:web",
         "debug": "npm run build:dev ; node --inspect-brk test/testSuite.js",
         "clean": "git clean -f -d src test; rm -rf lib",
         "doc": "mkdir -p docs ; jsdoc2md -c jsdoc.json --separators --source src/* -m table > docs/ilibCommon.md ; npm run doc:html",
         "doc:html": "jsdoc -c jsdoc.json"
     },
     "devDependencies": {
-        "@babel/core": "^7.18.5",
-        "@babel/preset-env": "^7.18.2",
-        "@babel/register": "^7.17.7",
-        "@babel/runtime": "^7.18.3",
+        "@babel/core": "^7.18.10",
+        "@babel/preset-env": "^7.18.10",
+        "@babel/register": "^7.18.9",
+        "@babel/runtime": "^7.18.9",
+        "@open-wc/webpack-import-meta-loader": "^0.4.7",
         "assertextras": "^1.1.0",
         "babel-loader": "^8.2.5",
         "babel-plugin-add-module-exports": "^1.0.4",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "babel-plugin-transform-import-meta": "^2.2.0",
+        "cldr-core": "^41.0.0",
         "docdash": "^1.2.0",
         "grunt": "^1.5.3",
         "grunt-babel": "^8.0.0",
@@ -85,22 +92,27 @@
         "grunt-contrib-clean": "^2.0.1",
         "grunt-contrib-jshint": "^3.2.0",
         "grunt-contrib-nodeunit": "^4.0.0",
-        "grunt-contrib-uglify": "^5.2.1",
-        "jsdoc": "^3.6.10",
+        "grunt-contrib-uglify": "^5.2.2",
+        "ilib-assemble": "^1.1.2",
+        "ilib-data-utils": "^1.1.0",
+        "jsdoc": "^3.6.11",
         "jsdoc-to-markdown": "^7.1.1",
+        "json-stable-stringify": "^1.0.1",
         "load-grunt-tasks": "^5.1.0",
         "nodeunit": "^0.11.3",
         "npm-run-all": "^4.1.5",
         "open-cli": "^7.0.1",
-        "webpack": "^5.73.0",
+        "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
-        "ilib-common": "^1.1.1",
-        "ilib-ctype": "^1.0.0",
-        "ilib-locale": "^1.2.1",
+        "ilib-common": "^1.1.2",
+        "ilib-ctype": "file:../ilib-ctype/ilib-ctype-1.1.0.tgz",
+        "ilib-istring": "file:../ilib-istring/ilib-istring-1.0.0.tgz",
+        "ilib-locale": "^1.2.2",
         "ilib-localedata": "^1.3.2",
-        "ilib-localematcher": "^1.2.1"
+        "ilib-localematcher": "^1.2.2",
+        "json5": "^2.2.1"
     }
 }
