--- a/package.json
+++ b/package.json
@@ -108,11 +108,11 @@
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
         "ilib-common": "^1.1.2",
-        "ilib-ctype": "file:../ilib-ctype/ilib-ctype-1.1.0.tgz",
+        "ilib-ctype": "^1.1.0",
         "ilib-env": "^1.3.2",
-        "ilib-istring": "file:../ilib-istring/ilib-istring-1.0.0.tgz",
+        "ilib-istring": "^1.0.0",
         "ilib-locale": "^1.2.2",
-        "ilib-localedata": "^1.3.2",
+        "ilib-localedata": "^1.4.1",
         "json5": "^2.2.1"
     }
 }
